# Solving-PDEs-IN-C-

./: README.md
Chapter2/: complex_numbers.hpp
Iterative-methods/: mainc.cpp  matrix.cpp  matrix.hpp  vector.cpp  vector.hpp
Iterative-methods/linear_algebra_op/: CMakeLists.txt
Iterative-methods/linear_algebra_op/app/: CMakeLists.txt  main.cpp
Iterative-methods/linear_algebra_op/include/: matrix.hpp  vector.hpp
Iterative-methods/linear_algebra_op/src/: CMakeLists.txt  main.cpp  matrix.cpp  vector.cpp
Iterative-methods/linear_algebra_op/test/: CMakeLists.txt  vectorTests.cpp
Iterative-methods/smoothers/: laplacian.hpp  smoothing.hpp  utilities.hpp
